[package]
authors = ["Minghao, Li <leemiyinghao@gmx.com>"]
edition = "2018"
name = "vec2seq_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
crossbeam = "0.7"
finalfusion = "0.12"
fnv = "1"
glam = "0.9"
granne = {git = "https://github.com/granne/granne.git", version = "0.5.1"}
indicatif = "0.15"
jieba-rs = "0.5"
leveldb = "0.8"
leveldb-sys = "2.0"
lz_fnv = "0.1"
rand = "0.7"
regex = "1.3.9"
rusqlite = "0.23"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
threadpool = "1.8"
timeit = "0.1"
libflate = "1"

[lib]
name = "vec2seq_rust"
path = "src/lib.rs"

[[bin]]
name = "vec2seq_rust_cli"
path = "src/main.rs"